--- a/wwr/index.html
+++ b/wwr/index.html
@@ -49,10 +49,10 @@
                 </section>
                     <div id="background"></div>
                         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains"> 
-                    
-                    <section class="msg">
+                <section class="msg">
                     <h2>More Than Just The Thrill</h2>
                     <p>Enjoy the breathtaking scenery.  From valleys, meadows, canyons, and high peaks; it´s way more than just the rapids.  It´s a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
+                    <a class='join' href="rivers.html">Join Us</a>
                 </section>
         </main>
         <footer>
@@ -63,7 +63,10 @@
                     <a href="https://facebook.com" target="_blank">
                         <img src="images/facebook.png" alt="fb icon">
                     </a>
-                    <a href="https://instagram.com">
+                    <a href="https://twitter.com" target="_blank">
+                        <img src="images/twitter.png" alt="twitter icon">
+                    </a>
+                    <a href="https://instagram.com" target="_blank">
                     <img src="images/instagram.png" alt="instagram icon">
                     </a>    
                 </div>
