--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <a href="aboutme/index.html">About Me Page</a>             
   <a href="wwr/index.html">White Water Rafting Website</a>
   <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-  <a href="positioning.html">Positioning Activity</a>
+  <a href="positioning/positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
-  <a href="#">Personal Siteplan</a>
+  <a href="site_plan/site_plan.html">Personal Siteplan</a>
 </nav> 
-<p>Your Name Here - WDD130</p>
+<p>Heydi Cortez - WDD130</p>
 </body>
 </html>
