--- a/site_plan/site_plan.html
+++ b/site_plan/site_plan.html
@@ -51,7 +51,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#C34041]</td><td class="secondary">[#6C2A75]</td><td class="accent1">[#DB7176]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">[#D8AA3C]</td><td class="secondary">[#814B14]</td><td class="accent1">[#5D3D00]</td><td class="accent2">[#FFFFFF]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
