--- a/site_plan/index.html
+++ b/site_plan/index.html
@@ -21,7 +21,7 @@
         </header>
         <div id="contact-me">
             <div id="call">
-                <img id="call-img" src="images/call_gold.jpg" alt="Antique Phone"> 
+                <img id="call-img" src="images/Heydi_Corales.jpg" alt="Antique Phone"> 
             </div>
         <section>
             <h1>HEYDI CORTEZ MORALES</h1>
