Adding java code

--- a/site_plan/contact.html
+++ b/site_plan/contact.html
@@ -3,32 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | ZATECOR RAFTING | Home</title>
+    <title>Graphic Design | CORALES DESIGN | Home</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo_zatecor_rafting.png" alt="Zatecor Rafting Logo">
+                <img class="logo" src="images/8.jpg" alt="Corales Design Logo">
             </a>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="faq.html">FAQ</a>
-                <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contactus.html">Contact Us</a>
+                <a href="index.html">HOME</a>
+                <a href="portfolio.html">PORTFOLIO</a>
+                <a href="site_plan.html">SITE PLAN</a>
+                <a href="about.html">ABOUT</a>
             </nav>
         </header>
-        <div id="hero">
-            <div id="hero-box">
-                <img id="hero-img" src="images/littlecolorado-wide.jpg" alt="People enjoying white water rafting"> 
-            
+        <div id="contact-me">
+            <div id="call">
+                <img id="call-img" src="images/call_gold.jpg" alt="Antique Phone"> 
             </div>
-            <section id="hero-msg">
-                <h3>CONTACT US</h3>
-                <h4><input type="text" placeholder="Search.."></h4>
-            </section>
-        </div>
+        <section>
+            <h1>ABOUT ME</h1>
+            <p>Hello! Is a placer have you here.  Corales Design is my portfolio website where you can see designs
+               that I had created since my begginings as student and now as graphic designer.</p>
+            <p>My purpose is give you the best experience designing your projects, and help your brand caught the attention, 
+                transmit emotions, and your clients want to reach you. </p>
+             <p>What are you waiting to work together? Fill this form, and I will contact you sooner.</p>   
+        </section>   
         <main class="">
             <div id="feedback">
             <form action="/my-handling-form-page" method="post">
@@ -71,21 +73,18 @@
             </div>
         </main>   
         <footer>
-                <p>ZATECOR &copy; 2024 - Heydi Cortez</p>
-                <p><a href="site-plan-rafting.html">Site Plan</a></p>
-                <p><a href="contactus.html">Contact Us</a></p>
-                <div class="social">
-                    <a href="https://facebook.com" target="_blank">
-                        <img src="images/facebook.png" alt="fb icon">
-                    </a>
-                    <a href="https://twitter.com" target="_blank">
-                        <img src="images/twitter.png" alt="twitter icon">
-                    </a>
-                    <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
-                    </a>    
-                </div>
-        </footer>
-     </div>
-</body>
-</html>
+            <p>CORALES DESIGN &copy; 2024 </p>
+            <p><a href="site_plan.html">Site Plan</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="instagram icon">
+                </a>    
+            </div>
+    </footer> 
