adding css home page

--- a/site_plan/index.html
+++ b/site_plan/index.html
@@ -33,6 +33,7 @@
         </section>   
         <section>
             <h1>BOOK COVERS</h1>
+            <img class="card-img" src="images/BookCovers.PNG" alt="river in forest">
             <p>Three different designs for the cover book Frankestein of Mary Shelley.   I did some research
                 about the book, and the author.  I dedicated time making a lot of skethes to get the final product.
             </p>
