Portofolio Sub Page

--- a/site_plan/index.html
+++ b/site_plan/index.html
@@ -51,7 +51,22 @@
             </p>
             <p>I used Adobe XD to design this mini site, and it provide an user experience when navigate it.  </p>
             <button type="submit">Learn more...</button>  
-        </section>     
+        </section>
+        <div id="columns">
+        <section class="right-text">
+            <h1>WHAT I DO</h1>
+            <h2>Illustrations</h2>
+            <p>I use illustrator to make desgins from cero, like posters, invitations, logos, social media advertaisment, etc.
+                I also like to use canva to create a design with templates.
+            </p>
+        </section>  
+            <section class="left-text">    
+            <h2>Websites</h2>
+            <p>I used Adobe XD to create websites to provide users a live action experience. I also like to use templates to create them.
+                Finally, I too can create a website by html and css language.   </p>
+
+        </section>  
+    </div>     
         </main>   
         <footer>
             <p>CORALES DESIGN &copy; 2024 </p>
